<resources>
    <string name="app_name">MyFirstProject</string>
    <string name="attractions">Attractions</string>
    <string name="need_to_know">Need to know</string>
    <string name="more">More</string>
    <string name="todo">TODO</string>
    <string name="image">image</string>
    <string name="must_see">Must see</string>
    <string name="cultural">Cultural</string>
    <string name="architecture">Architecture</string>
    <string name="southern_rome">Southern Rome</string>
    <string name="leaf">leaf</string>
    <string name="sports_girl">sports_girl</string>
    <string name="athletes_names">Saina Nehwal</string>
    <string name="indian_badminton_player">Indian badminton player</string>
    <string name="achievement">achievement</string>
    <string name="_30">30</string>
    <string name="games">Games</string>
    <string name="minutes">Minutes</string>
    <string name="_2400">2400</string>
    <string name="_16">16</string>
    <string name="shots">Shots</string>
    <string name="_13">13</string>
    <string name="assists">Assists</string>
    <string name="badminton_comanda">badminton_comanda</string>
    <string name="badminton_comanda1">badminton_comanda!</string>
    <string name="information_athletics">information_athletics</string>
    <string name="physical_parameters">Physical Parameters</string>
    <string name="athletes_params">sportsmens_params</string>
    <string name="_1_80m">1.80m</string>
    <string name="height">Height</string>
    <string name="biography">Biography</string>
    <string name="_60kg">60kg</string>
    <string name="weight">Weight</string>
    <string name="_32_yrs">32 Yrs</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="description">Saina Nehwal is an Indian professional badminton player. A former world no. 1, she has won 24 international titles, which includes ten Superseries titles. Although she reached the world\'s 2nd in 2009, it was only in 2015 that she was able to attain the world Saina Nehwal is an Indian professional badminton player. A former world no. 1, she has won 24 international titles, which includes ten Superseries titles. Although she reached the world\'s 2nd in 2009, it was only in 2015 that she was able to attain the world Saina Nehwal is an Indian professional badminton player. A former world no. 1, she has won 24 international titles, which includes ten Superseries titles. Although she reached the world\'s 2nd in 2009, it was only in 2015 that she was able to attain the world</string>
    <string name="_17">17</string>
    <string name="wins">Wins</string>
    <string name="back">Back</string>
    <string name="att">Attractions</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_n_back">Welcome \n back</string>
    <string name="rectangle">rectangle</string>
    <string name="cake">cake</string>
    <string name="cinnabon_background">cinnabon_background</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="welcome_nback">Welcome\nback</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_continue_as_guest">or continue as Guest</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="UnderLine"><u>Forgot Password?</u></string>
    <string name="UnderLine1"><u>Sign up</u></string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="google_icon">google_icon</string>
    <string name="button_next">button_next</string>
</resources>