<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true"
    tools:ignore="RtlHardcoded, MissingConstraints">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_info_app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:backgroundTint="#37003C"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_info_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/dark_purple"
            android:fitsSystemWindows="true"
            app:titleEnabled="true"
            app:title="@string/athletes_names"
            app:expandedTitleTextColor="@color/white"
            app:collapsedTitleTextColor="@color/white"
            app:statusBarScrim="@color/dark_purple"
            app:expandedTitleGravity="left|bottom"
            app:collapsedTitleGravity="left">

            <ImageView
                android:id="@+id/leaf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/purple_leaf"
                android:layout_gravity="end|top"
                android:contentDescription="@string/leaf"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/sports_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sports_girl"
                android:layout_gravity="end|bottom"
                android:contentDescription="@string/sports_girl"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/badminton_comanda1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:src="@drawable/badminton_comanda"
                android:layout_marginStart="38dp"
                android:layout_marginBottom="70dp"
                android:contentDescription="@string/badminton_comanda"
                app:layout_collapseMode="parallax"/>

            <ImageView
                android:id="@+id/badminton_comanda2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:src="@drawable/badminton_comanda1"
                android:layout_marginStart="68dp"
                android:layout_marginBottom="71dp"
                android:contentDescription="@string/badminton_comanda1"
                android:nextFocusRight="@+id/badminton_comanda1"
                app:layout_collapseMode="parallax"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:text="@string/indian_badminton_player"
                android:textColor="@color/white_40"
                android:textSize="12sp"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="12dp"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_info_toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?selectableItemBackground"
                app:layout_collapseMode="pin">


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.core.widget.NestedScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="260dp"
        android:layout_marginHorizontal="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_rectangle_8"
            android:contentDescription="@string/achievement" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="@+id/information"
                app:layout_constraintEnd_toStartOf="@+id/amount_minutes"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games"
                android:fontFamily="@font/roboto_regular"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/amount_games"
                app:layout_constraintStart_toStartOf="@+id/information"
                app:layout_constraintEnd_toStartOf="@+id/minutes" />

            <TextView
                android:id="@+id/amount_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2400"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/amount_games"
                app:layout_constraintEnd_toStartOf="@id/amount_shots"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:fontFamily="@font/roboto_regular"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/games"
                app:layout_constraintTop_toBottomOf="@+id/amount_minutes"
                app:layout_constraintEnd_toStartOf="@+id/shots" />

            <TextView
                android:id="@+id/amount_shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toEndOf="@+id/amount_minutes"
                app:layout_constraintEnd_toStartOf="@id/amount_assists"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shots"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toEndOf="@id/minutes"
                app:layout_constraintTop_toBottomOf="@id/amount_shots"
                app:layout_constraintEnd_toStartOf="@id/assists"/>

            <TextView
                android:id="@+id/amount_assists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toEndOf="@id/amount_shots"
                app:layout_constraintEnd_toEndOf="@+id/information"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/assists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assists"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toEndOf="@+id/shots"
                app:layout_constraintTop_toBottomOf="@id/amount_assists"
                app:layout_constraintEnd_toEndOf="@+id/information" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="325dp">

        <ImageView
            android:id="@+id/information_athletics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/information_athletics"
            android:src="@drawable/rectangle"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="18dp"/>

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/roboto_bold"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:text="@string/physical_parameters"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="24sp" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>