<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cinnabon_page"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_img_bg"
    tools:ignore="MissingConstraints, RtlSymmetry, SmallSp">

    <ImageView
        android:id="@+id/cake"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/cake_cinnabon"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cake"
        android:layout_marginBottom="190dp"
        android:paddingTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_nback"
        android:textSize="34sp"
        app:autoSizeTextType="uniform"
        android:layout_marginStart="50dp"
        android:textColor="@color/brown"
        app:layout_constraintVertical_bias="0.2"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cinnabon_rectangle"/>

    <ImageView
        android:id="@+id/cinnabon_rectangle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/cinnabon_rec"
        android:contentDescription="@string/rectangle"
        app:layout_constraintHeight_percent="0.49"
        app:layout_constraintBottom_toBottomOf="@+id/cinnabon_page" />

    <TextView
        android:id="@+id/please_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in"
        android:textSize="24sp"
        android:textColor="@color/wet_asphalt"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="0.037"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="@+id/cinnabon_rectangle"
        app:layout_constraintStart_toStartOf="@+id/cinnabon_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/login"
        android:layout_marginStart="49dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/MyTextInputLayout"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/light_brown"
        app:boxStrokeColor="@color/light_brown"
        app:boxBackgroundColor="@color/light_brown"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@+id/cinnabon_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/cinnabon_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/please_sign_up">
        <EditText
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/login"
            android:textColorHint="@color/light_brown"
            android:textCursorDrawable="@null"
            android:textColor="@color/wet_asphalt"
            android:backgroundTint="#0000"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintStart_toStartOf="@+id/cinnabon_rectangle"
            app:layout_constraintEnd_toEndOf="@+id/cinnabon_rectangle"
            app:layout_constraintTop_toTopOf="@+id/please_sign_up"
            android:autofillHints="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:theme="@style/colorStroke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeColor="@color/light_brown"
        android:textColorHint="@color/light_brown"
        app:boxBackgroundColor="@color/light_brown"
        app:hintTextColor="@color/light_brown"
        app:endIconMode="password_toggle"
        android:layout_marginTop="55dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/cinnabon_rectangle"
        app:layout_constraintStart_toStartOf="@+id/cinnabon_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/please_sign_up"
        app:passwordToggleDrawable="@drawable/ic_eye_1">

        <EditText
            android:theme="@style/colorStroke"
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="1"
            android:background="#0000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/wet_asphalt"
            android:textColorHint="@color/light_brown"
            android:textColorLink="@color/light_brown"
            android:textCursorDrawable="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:src="@drawable/line_cinnabon"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintBottom_toTopOf="@+id/password"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:src="@drawable/line_cinnabon"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />


<!--    <ImageView-->
<!--        android:id="@+id/arrow_next"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/arrow_next_1"-->
<!--        android:layout_marginTop="3dp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        app:layout_constraintStart_toStartOf="@+id/button_next"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/button_next"-->
<!--        app:layout_constraintTop_toTopOf="@+id/button_next"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/button_next"/>-->


    <ImageView
        android:id="@+id/button_next"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/sign_in_next_button"
        app:layout_constraintEnd_toEndOf="@+id/cinnabon_rectangle"
        app:layout_constraintTop_toTopOf="@+id/cinnabon_rectangle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/cinnabon_rectangle"
        app:layout_constraintEnd_toEndOf="@id/cinnabon_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toTopOf="@id/text_continue">

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook_vector"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="47.5dp"
            app:layout_constraintStart_toStartOf="@+id/icons"
            app:layout_constraintEnd_toEndOf="@+id/icons"
            android:contentDescription="@string/facebook_icon" />

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_vector"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/facebook_icon"
            android:contentDescription="@string/google_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_as_guest"
        android:textSize="10sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@+id/icons"
        app:layout_constraintBottom_toTopOf="@+id/helper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_continue">

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UnderLine"
            android:textSize="16sp"
            android:textColor="@color/bright_blue"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            app:autoSizeTextType="uniform"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="0.5"
            app:layout_constraintTop_toBottomOf="@+id/text_continue"
            app:layout_constraintStart_toStartOf="@+id/cinnabon_rectangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UnderLine1"
            android:textSize="16sp"
            android:textColor="@color/bright_blue"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            app:autoSizeTextType="uniform"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="0.5"
            app:layout_constraintTop_toBottomOf="@+id/text_continue"
            app:layout_constraintEnd_toEndOf="@+id/cinnabon_rectangle"/>

    </LinearLayout>




<!--    <com.google.android.material.bottomappbar.BottomAppBar-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="bottom"-->
<!--        tools:ignore="BottomAppBar" />-->




</androidx.constraintlayout.widget.ConstraintLayout>

<!--    style="?android:attr/listSeparatorTextViewStyle"-->


<!--<EditText-->

<!--    android:id="@+id/password"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:inputType="textPassword"-->
<!--android:hint="@string/password"-->
<!--android:textColorHint="@color/wet_asphalt"-->
<!--android:backgroundTint="@color/light_brown"-->
<!--android:layout_marginTop="90dp"-->
<!--android:layout_marginStart="58dp"-->
<!--android:layout_marginEnd="50dp"-->
<!--android:drawableEnd="@drawable/eye"-->
<!--android:textColorLink="#D9C9C5"-->
<!--app:layout_constraintStart_toStartOf="@+id/cinnabon_rectangle"-->
<!--app:layout_constraintEnd_toEndOf="@+id/cinnabon_rectangle"-->
<!--app:layout_constraintTop_toTopOf="@+id/please_sign_up"-->
<!--android:autofillHints="1" />-->